# chatgpt_bot

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
src/: main.py
src/infrstructure/: config.py  db_session.py  hooks.py  log.py
src/web/: messages.py
src/web/handlers/: conversation.py  start.py
