[tool.poetry]
name = "chatgpt_bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^2.24"
pydantic = {extras = ["dotenv"], version = "^1.10.4"}
aioredis = "^2.0.1"
orjson = "^3.8.5"
structlog = "^22.3.0"
openai = "^0.26.4"
emoji = "^2.2.0"

[tool.poetry.dev-dependencies]
pre-commit = "^3.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \S*/tests/\S*
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
